force-app/main/default/objects/Bank_Info__c/Bank_Info__c.object-meta.xml
<CustomObject>
    <label>Bank Info</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Bank Info Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>