force-app/main/default/objects/Bank_Info__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <description>账户持有人</description>
    <label>Account Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>