force-app/main/default/objects/Bank_Info__c/fields/Account_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Title__c</fullName>
    <description>账户名称</description>
    <label>Account Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>