force-app/main/default/objects/Bank_Info__c/fields/Bank_Acct__c.field-meta.xml
<CustomField>
    <fullName>Bank_Acct__c</fullName>
    <description>银行账户</description>
    <label>Bank Acct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>