force-app/main/default/objects/Bank_Info__c/fields/Bank_Key__c.field-meta.xml
<CustomField>
    <fullName>Bank_Key__c</fullName>
    <label>Bank Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>