force-app/main/default/objects/Bank_Info__c/fields/C_R__c.field-meta.xml
<CustomField>
    <fullName>C_R__c</fullName>
    <label>C/R</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>22</fullName>
                <isActive>false</isActive>
                <label>22</label>
            </value>
            <value>
                <fullName>33</fullName>
                <isActive>false</isActive>
                <label>33</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>