force-app/main/default/objects/Bank_Info__c/fields/Control_Key__c.field-meta.xml
<CustomField>
    <fullName>Control_Key__c</fullName>
    <label>Control Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>