force-app/main/default/objects/Bank_Info__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>外部标识</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>