force-app/main/default/objects/Bank_Info__c/fields/Reference_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reference_Detail__c</fullName>
    <label>Reference Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>