force-app/main/default/objects/Bank_Info__c/fields/Valid_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_End_Date__c</fullName>
    <description>有效期结束日期</description>
    <label>Valid End Date</label>
    <type>Date</type>
</CustomField>