force-app/main/default/objects/Bank_Info__c/fields/Valid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Start_Date__c</fullName>
    <description>有效期开始日期</description>
    <label>Valid Start Date</label>
    <type>Date</type>
</CustomField>